2001-12-04  Alex Larsson  <alexl@redhat.com>

	* panel-applet-shell.c:
	(impl_PanelAppletShell_getExpandFlags): impl
	(panel_applet_shell_class_init): Add above
	
	* panel-applet.[ch]: (panel_applet_get_expand_flags,
	panel_applet_set_expand_flags): new functions

2001-11-30  Mark McLoughlin  <mark@skynet.ie>

	* panel-applet-marshal.list: kill VOID:STRING,STRING.

	* panel-applet.c:
	(panel_applet_get_global_key): impl.
	(panel_applet_get_private_key): impl.
	(panel_applet_save_yourself): upd.
	(panel_applet_finalize): free keys.
	(panel_applet_class_init): upd.
	(panel_applet_new): return a GtkWidget.

	* test-bonobo-applet.c:
	(test_applet_handle_save_yourself): upd.

2001-11-30  Mark McLoughlin  <mark@skynet.ie>

	* libpanelapplet-2.0.pc.in: fixup.

2001-11-30  Mark McLoughlin  <mark@skynet.ie>

	* GNOME_Panel_TestApplet.server.in: add icon.

	* test-bonobo-applet.c:
	(test_applet_handle_save_yourself): impl.
	(test_applet_new): connect to "save_yourself".

2001-11-30  Mark McLoughlin  <mark@skynet.ie>

	* panel-applet-marshal.list: add VOID:STRING,STRING.

	* panel-applet-private.h: add panel_applet_save_yourself.

	* panel-applet-shell.c:
	(impl_PanelAppletShell_saveYourself), impl.
	(panel_applet_shell_class_init): upd.

	* panel-applet.c:
	(panel_applet_save_yourself): impl.
	(panel_applet_class_init): set up "save_yourself" signal.

	* panel-applet.h: upd.

2001-11-30  Mark McLoughlin  <mark@skynet.ie>

	* panel-applet.h: make panel_applet_new return
	a GtkWidget.

2001-11-30  Mark McLoughlin  <mark@skynet.ie>

	* panel-applet.c: (panel_applet_construct): remove
	  lame gtk_widget_show_all. applets should show
	  themselves.

2001-11-30  Mark McLoughlin  <mark@skynet.ie>

	* panel-applet.[ch]: (panel_applet_get_size),
	(panel_applet_get_orient): new accessor methods.

2001-11-28  Alex Larsson  <alexl@redhat.com>

	* panel-applet.c (panel_applet_button_press):
	Return TRUE if handled popup. This removes the double
	popup menu bug.
