@@ -1,3 +1,10 @@
+2001-12-07  Mark McLoughlin  <mark@skynet.ie>
+
+	* panel-applet-shell.c: (impl_PanelAppletShell_getExpandFlags):
+	remove consts from args.
+
+	* panel-applet.h: add macro for completeness.
+
 2001-12-04  Alex Larsson  <alexl@redhat.com>
 
 	* panel-applet-shell.c:
